@@ -190,7 +190,6 @@ if (isset($CONFIG_PARMS)) {
 			$found = true;
 			$CONFIG_SITE = $key;
 			foreach($config as $var => $value) {
-//				$$var = $value;
 				define($var, $value);
 			}
 		break;
@@ -206,7 +205,6 @@ if (isset($CONFIG_PARMS)) {
 						$found = true;
 						$CONFIG_SITE = $key;
 						foreach($config as $var => $value) {
-//							$$var = $value;
 							if ($var != "SERVER_URL") define($var, $value);
 						}
 						define('SERVER_URL', $alias);
@@ -280,7 +278,6 @@ foreach($CONFIG_VARS as $indexval => $VAR) {
 			//-- load db specific functions
 			require_once("includes/functions/functions_db.php");
 			// NOTE: Setup the database connection, needed for logging
-//			include("db_layer.php");
 			$DBCONN = New DbLayer();
 			WriteToLog("Session-&gt; Config variable override detected. Possible hacking attempt. Script terminated.", "W", "S");
 			SystemFunctions::HandleIntrusion("Session-> Config variable override detected. Possible hacking attempt. Script terminated.\n");
@@ -317,9 +314,6 @@ $OLD_HANDLER = set_error_handler("GmErrorHandler");
 
 //-- setup execution timer
 $start_time = GetMicrotime();
-
-//-- Setup array of media types
-$MEDIATYPE = array("a11","acb","adc","adf","afm","ai","aiff","aif","amg","anm","ans","apd","asf","au","avi","awm","bga","bmp","bob","bpt","bw","cal","cel","cdr","cgm","cmp","cmv","cmx","cpi","cur","cut","cvs","cwk","dcs","dib","dmf","dng","doc","dsm","dxf","dwg","emf","enc","eps","fac","fax","fit","fla","flc","fli","fpx","ftk","ged","gif","gmf","hdf","iax","ica","icb","ico","idw","iff","img","jbg","jbig","jfif","jpe","jpeg","jp2","jpg","jtf","jtp","lwf","mac","mid","midi","miff","mki","mmm",".mod","mov","mp2","mp3","mpg","mpt","msk","msp","mus","mvi","nap","ogg","pal","pbm","pcc","pcd","pcf","pct","pcx","pdd","pdf","pfr","pgm","pic","pict","pk","pm3","pm4","pm5","png","ppm","ppt","ps","psd","psp","pxr","qt","qxd","ras","rgb","rgba","rif","rip","rla","rle","rpf","rtf","scr","sdc","sdd","sdw","sgi","sid","sng","swf","tga","tiff","tif","txt","text","tub","ul","vda","vis","vob","vpg","vst","wav","wdb","win","wk1","wks","wmf","wmv","wpd","wxf","wp4","wp5","wp6","wpg","wpp","xbm","xls","xpm","xwd","yuv","zgm");
 
 //-- start the php session
 $time = time() + GM_SESSION_TIME;
